[package]
name = "metrics-runtime"
version = "0.12.1"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"

license = "MIT"

description = "A batteries-included metrics library."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "histogram", "counter", "gauge"]

[features]
default = ["exporters", "observers"]
exporters = ["metrics-exporter-log", "metrics-exporter-http"]
observers = ["metrics-observer-yaml", "metrics-observer-json", "metrics-observer-prometheus"]

[[bench]]
name = "histogram"
harness = false

[dependencies]
metrics-core = { path = "../metrics-core", version = "^0.5" }
metrics-util = { path = "../metrics-util", version = "^0.3" }
metrics = { path = "../metrics", version = "^0.12", features = ["std"] }
im = "^12"
arc-swap = "^0.3"
parking_lot = "^0.9"
quanta = "^0.3"
futures = "^0.1"
crossbeam-utils = "^0.6"
metrics-exporter-log = { path = "../metrics-exporter-log", version = "^0.3", optional = true }
metrics-exporter-http = { path = "../metrics-exporter-http", version = "^0.2", optional = true }
metrics-observer-yaml = { path = "../metrics-observer-yaml", version = "^0.1", optional = true }
metrics-observer-prometheus = { path = "../metrics-observer-prometheus", version = "^0.1", optional = true }
metrics-observer-json = { path = "../metrics-observer-json", version = "^0.1", optional = true }

[dev-dependencies]
log = "^0.4"
env_logger = "^0.6"
getopts = "^0.2"
hdrhistogram = "^6.1"
criterion = "^0.2.9"
lazy_static = "^1.3"
