[package]
name = "metrics-tracing-context"
version = "0.16.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT"

description = "A crate to use tracing context as metrics labels."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "tracing"]

[lib]
bench = false

[[bench]]
name = "visit"
harness = false

[[bench]]
name = "layer"
harness = false

[dependencies]
itoa = { version = "1", default-features = false }
metrics = { version = "^0.23", path = "../metrics" }
metrics-util = { version = "^0.17", path = "../metrics-util" }
lockfree-object-pool = { version = "0.1.3", default-features = false }
indexmap = { version = "2.1", default-features = false, features = ["std"] }
once_cell = { version = "1", default-features = false, features = ["std"] }
tracing = { version = "0.1.29", default-features = false }
tracing-core = { version = "0.1.21", default-features = false }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["std"] }

[dev-dependencies]
criterion = { version = "=0.3.3", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
tracing = { version = "0.1.29", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ["registry"] }
itertools = { version = "0.12.0", default-features = false, features = ["use_std"] }
