[package]
name = "metrics-tracing-context"
version = "0.16.0"
authors = ["MOZGIII <mike-n@narod.ru>"]
edition = "2018"
rust-version = "1.71.1"

license = "MIT"

description = "A crate to use tracing context as metrics labels."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "tracing"]

[lib]
bench = false

[[bench]]
name = "visit"
harness = false

[[bench]]
name = "layer"
harness = false

[dependencies]
indexmap = { workspace = true }
itoa = { workspace = true }
lockfree-object-pool = { workspace = true }
metrics = { version = "^0.24", path = "../metrics" }
metrics-util = { version = "^0.18", path = "../metrics-util" }
once_cell = { workspace = true }
tracing = { workspace = true }
tracing-core = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std"] }

[dev-dependencies]
criterion = { workspace = true }
itertools = { workspace = true, features = ["use_std"] }
parking_lot = { workspace = true }
tracing = { workspace = true, features = ["std"] }
tracing-subscriber = { workspace = true, features = ["registry"] }
