[package]
name = "metrics-util"
version = "0.17.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT"

description = "Helper types/functions used by the metrics ecosystem."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics-util"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "quantile", "percentile"]

[lib]
bench = false

[[bench]]
name = "bucket"
harness = false
required-features = ["handles"]

[[bench]]
name = "registry"
harness = false
required-features = ["registry"]

[[bench]]
name = "prefix"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "router"
harness = false
required-features = ["layer-router"]

[[example]]
name = "bucket-crusher"
required-features = ["handles"]

[dependencies]
metrics = { version = "^0.23", path = "../metrics" }
crossbeam-epoch = { version = "0.9.2", default-features = false, optional = true, features = ["alloc", "std"] }
crossbeam-utils = { version = "0.8", default-features = false, optional = true }
aho-corasick = { version = "1", default-features = false, optional = true, features = ["std"] }
indexmap = { version = "2.1", default-features = false, features = ["std"], optional = true }
quanta = { version = "0.12", default-features = false, optional = true }
sketches-ddsketch = { version = "0.2", default-features = false, optional = true }
radix_trie = { version = "0.2", default-features = false, optional = true }
ordered-float = { version = "4.2", default-features = false, optional = true }
ahash = { version = "0.8.8", default-features = false, optional = true }
hashbrown = { version = "0.14", default-features = false, optional = true, features = ["ahash"] }

[dev-dependencies]
approx = "0.5"
criterion = { version = "=0.3.3", default-features = false }
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"
getopts = "0.2"
hdrhistogram = { version = "7.2", default-features = false }
sketches-ddsketch = "0.2"
ndarray = "0.15"
ndarray-stats = "0.5"
noisy_float = "0.2"
ordered-float = "4.2"
predicates-core = "=1.0.5"
predicates-tree = "=1.0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }
crossbeam-queue = "0.3"
quickcheck = "1"
quickcheck_macros = "1"
mockall = "0.11"

[features]
handles = ["crossbeam-epoch", "crossbeam-utils"]
debugging = ["indexmap", "ordered-float", "registry"]
default = ["debugging", "handles", "layers", "summary", "recency", "registry"]
layers = ["layer-filter", "layer-router"]
layer-filter = ["aho-corasick"]
layer-router = ["radix_trie"]
summary = ["sketches-ddsketch"]
recency = ["registry", "quanta"]
registry = ["crossbeam-epoch", "crossbeam-utils", "handles", "hashbrown"]
