[package]
name = "metrics-util"
version = "0.20.1"
edition = "2018"
rust-version = { workspace = true }

description = "Helper types/functions used by the metrics ecosystem."
license = { workspace = true }
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/metrics-util"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "quantile", "percentile"]

[lib]
bench = false

[[bench]]
name = "bucket"
harness = false
required-features = ["handles"]

[[bench]]
name = "registry"
harness = false
required-features = ["registry"]

[[bench]]
name = "prefix"
harness = false

[[bench]]
name = "filter"
harness = false

[[bench]]
name = "router"
harness = false
required-features = ["layer-router"]

[[example]]
name = "bucket-crusher"
required-features = ["storage"]

[dependencies]
ahash = { workspace = true, optional = true }
aho-corasick = { workspace = true, features = ["std"], optional = true }
crossbeam-epoch = { workspace = true, features = ["alloc", "std"], optional = true }
crossbeam-utils = { workspace = true, optional = true }
hashbrown = { workspace = true, optional = true }
indexmap = { workspace = true, optional = true }
metrics = { version = "^0.24", path = "../metrics" }
ordered-float = { workspace = true, optional = true }
quanta = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
rand_xoshiro = { workspace = true, default-features = false, optional = true }
radix_trie = { workspace = true, optional = true }
sketches-ddsketch = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
crossbeam-queue = { workspace = true }
getopts = { workspace = true }
mockall = { workspace = true }
ndarray = { workspace = true }
ndarray-stats = { workspace = true }
noisy_float = { workspace = true }
ordered-float = { workspace = true }
predicates = { workspace = true }
predicates-core = { workspace = true }
predicates-tree = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rand = { workspace = true }
sketches-ddsketch = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "ansi"] }

[features]
default = ["debugging", "layers", "recency", "registry", "storage"]
debugging = ["indexmap", "ordered-float", "registry"]
layers = ["layer-filter", "layer-router"]
layer-filter = ["aho-corasick"]
layer-router = ["radix_trie"]
recency = ["registry", "quanta"]
registry = ["hashbrown", "storage"]
storage = ["crossbeam-epoch", "crossbeam-utils", "rand", "rand_xoshiro", "sketches-ddsketch"]
