[package]
name = "metrics"
version = "0.23.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT"

description = "A lightweight metrics facade."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "facade"]

[lib]
bench = false

[[bench]]
name = "macros"
harness = false

[dependencies]
ahash = { version = "0.8.8", default-features = false }

[target.'cfg(target_pointer_width = "32")'.dependencies]
portable-atomic = { version = "1", default-features = false, features = [
    "fallback",
] }

[dev-dependencies]
log = "0.4"
criterion = { version = "=0.3.3", default-features = false }
rand = "0.8"
trybuild = "1"
