[package]
name = "metrics"
version = "0.24.1"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.71.1"

license = "MIT"

description = "A lightweight metrics facade."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "facade"]

[lib]
bench = false

[[bench]]
name = "macros"
harness = false

[dependencies]
ahash = { workspace = true }

[target.'cfg(target_pointer_width = "32")'.dependencies]
portable-atomic = { version = "1", default-features = false, features = [
    "fallback",
] }

[dev-dependencies]
criterion = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
trybuild = { workspace = true }
