[package]
name = "metrics-histogram-fidelity"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.56.1"

[workspace]

[dependencies]
metrics-util = { path = "../../metrics-util" }
rand = "0.9"
ndarray = "0.13"
ndarray-stats = "0.3"
noisy_float = "0.1"
ordered-float = "3.4"
